fotter completato manca main

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="container header" >
 
             <!-- lista genere  -->
-            <ul>
-                <li>Donna</li>
-                <li>Uomo</li>
-                <li>Bambini</li>
+            <ul class="lista header">
+                <li><a href="#">Donna</a></li>
+                <li><a href="#">Uomo</a></li>
+                <li><a href="#">Bambini</a></li>
             </ul>  
 
             <!-- logo -->
@@ -49,61 +49,41 @@
     <!-- main -->
     <main>
     <!-- riga 1 -->
-    <!-- riga 2 -->
+    <!-- riga 2 --> <div>a</div>
     </main>
 
     <!-- footer -->
     <footer>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, aliquam distinctio accusantium, nobis sint doloribus nulla earum illum eligendi tenetur nisi velit eaque soluta ea. Harum veniam tempore ad adipisci.
-Temporibus rerum nostrum consectetur pariatur voluptatum autem nihil harum odio porro id. Voluptas velit eligendi deleniti! Sint tenetur, reprehenderit, optio voluptate facere veniam autem delectus aliquam iure dolorum quod dicta?
-Ipsa omnis aperiam explicabo odio quas voluptas alias animi, dolor nobis eius architecto atque deleniti inventore commodi quidem veritatis? Cum laboriosam et ipsum dolores molestiae repellat porro, voluptatibus neque recusandae.
-Incidunt sequi maxime voluptas distinctio officiis beatae, laborum architecto, excepturi suscipit praesentium necessitatibus similique dolorum! Molestiae aperiam ullam nostrum excepturi? Aut blanditiis pariatur quod dicta, laborum eius tempore eveniet veniam.
-Maxime tempora reprehenderit officiis iure impedit. Placeat quaerat dolore similique velit dicta natus delectus corrupti dignissimos. Consectetur consequuntur repellat eos in. Consequuntur iste amet quis facilis. Atque doloremque illo veniam.
-Ducimus delectus commodi temporibus sapiente qui eos hic, vel aliquid necessitatibus unde illo provident nam sint repellendus fugit illum neque sed labore quidem. Harum eligendi optio dolores assumenda deleniti dolorem.
-Facilis, quod dignissimos est, architecto, nesciunt amet soluta repellendus exercitationem harum molestias odio iusto natus autem eos quasi ab facere suscipit iure atque obcaecati? Repellendus quasi corrupti esse perferendis ut!
-Sint ab autem a libero accusantium nihil esse sed natus laudantium unde voluptatum quisquam accusamus debitis, magni rerum velit soluta eum hic. Sint placeat quidem doloribus, accusamus mollitia adipisci vel.
-Ipsum quibusdam vitae illum voluptatem necessitatibus? Repellendus ratione quo porro tenetur saepe. Cumque ab possimus rerum nam aspernatur illum error labore sapiente culpa, reprehenderit, iusto ad reiciendis facere ex. Molestiae.
-Accusantium accusamus facere tempora quidem sed quibusdam, odit doloribus rerum, incidunt deserunt nostrum fugit quis praesentium minus quaerat beatae quo ex aut, perspiciatis repellat nisi veritatis dolores! Nam, nihil qui.
-Aut cupiditate labore praesentium eveniet sit quia adipisci sapiente hic autem debitis quae similique commodi in vel quo voluptatem, voluptatibus quasi ex fugit suscipit maxime dignissimos ratione illo magnam. Porro.
-Et ratione eligendi aperiam repudiandae maiores velit veniam dolorem, asperiores, non ducimus minima aliquam excepturi incidunt accusantium esse. Ab fugit et, aliquam hic omnis molestiae nemo. Ipsum consequuntur repudiandae temporibus?
-Accusantium sint rerum eius non alias nobis nihil provident natus magni, dolorum debitis tempore enim cumque nulla, modi deserunt esse eaque reiciendis molestias itaque atque nemo. Modi tempore quos voluptatum.
-Nisi cumque eligendi repudiandae tenetur quidem aliquid in sed voluptatibus officiis natus, libero doloremque deleniti ad similique, adipisci debitis animi, officia vel eaque esse nemo minima alias laudantium! Repellat, dolorem.
-Soluta saepe culpa similique doloribus a expedita voluptatum fugiat ad quaerat. Quam repellendus inventore deleniti nulla. Sed aut qui laboriosam saepe ipsam modi distinctio nulla sit iure. Neque, pariatur nihil.
-Magni dolorem quidem sit nam commodi quos obcaecati, perferendis ullam aperiam eos! Neque quisquam hic tempora voluptas molestias ullam tenetur laudantium temporibus, sint numquam quaerat aspernatur debitis quibusdam illum. Repellat.
-Aspernatur magnam iste assumenda obcaecati quam, nobis incidunt quas fuga repellat sapiente consequuntur ab omnis laudantium vel alias nam error sit nostrum rerum animi architecto. Labore assumenda voluptatum doloremque maxime.
-Doloribus temporibus atque cupiditate, id fugiat laboriosam repellat, blanditiis sit exercitationem asperiores cum quis labore saepe itaque placeat neque! Optio quod dignissimos dolores cupiditate delectus eum minima incidunt, alias molestias.
-Voluptas, excepturi quas. Optio numquam repellat laboriosam veniam! Tempore reprehenderit accusantium, eum nemo impedit optio odio, pariatur nulla quisquam totam voluptatem illo vitae commodi repellat aperiam temporibus non voluptatibus doloremque?
-Aspernatur exercitationem mollitia, dicta aut minus veritatis neque. Id ratione facere, inventore ullam voluptatem officiis corrupti ad! Qui aut ducimus, nemo quas illo dolor assumenda placeat, fuga, possimus tempora temporibus?
-Repellat ea cumque at suscipit. Iure provident eos similique cupiditate quibusdam dolor culpa, error sed dolore natus pariatur. Cumque numquam eos impedit cum quis nesciunt illo natus ad. Tenetur, recusandae.
-Nobis nihil, similique vitae magni nostrum aut soluta aperiam, impedit vero suscipit cumque hic. Iure blanditiis, quibusdam consequatur quas quos veritatis est temporibus, accusamus mollitia minus, ratione voluptatem explicabo nostrum.
-Officia mollitia magni, architecto quibusdam quasi asperiores ipsam quo voluptate error cumque eveniet similique vel iste voluptas aliquam aperiam at dolorum laudantium! Facere natus dolor commodi nesciunt quae harum neque?
-Sapiente officiis ad repudiandae itaque illo consequuntur ducimus quod velit quibusdam blanditiis veritatis incidunt, ipsa error perferendis quae enim maxime ullam labore doloribus tempora est repellat sequi in. Beatae, dignissimos!
-Alias, magni fuga rem facilis nesciunt, facere porro doloribus aliquam vel ex numquam similique id ullam dolorem? Voluptatem ea enim, optio quis aliquam dicta harum delectus, ab quaerat placeat fugit!
-Exercitationem, quisquam facere non magnam nemo, modi cumque eius ipsam consectetur, perspiciatis a delectus voluptatem repellendus dolor deleniti ab ea numquam ducimus? Nostrum, quibusdam sequi? Enim quia voluptatem qui iure!
-Iure consequatur laboriosam aliquid illum dolor tempore tenetur consectetur esse itaque. Nemo, neque? Doloribus accusantium minus sequi quod eos aspernatur, hic ab, animi excepturi, veniam labore corrupti aliquid. Ab, ducimus!
-Alias, earum commodi quas placeat vero, cum dolorem libero exercitationem molestiae provident eaque eum suscipit nisi necessitatibus aspernatur quam ab. Asperiores eligendi quia facilis exercitationem iste blanditiis, laudantium sit odit!
-Nisi fugiat quas veritatis molestias quos libero voluptate quisquam. Nisi tenetur sit neque quibusdam explicabo repellendus aliquid incidunt facere facilis corrupti mollitia, voluptas sunt laudantium dignissimos, obcaecati minus expedita consectetur.
-Tempora, maiores quisquam rem distinctio error odio aspernatur, reiciendis reprehenderit ab, quis sequi animi aliquam perferendis quibusdam ad hic saepe sint! Incidunt magnam autem itaque consequatur. Rem, nam sit. Rerum!
-Voluptas minima laborum dolorem, maiores blanditiis suscipit dolor quibusdam quos numquam, sapiente, aliquid possimus ad autem. Illum mollitia atque, odit iste rem dicta ducimus, odio aliquam quos quaerat id ad?
-Consectetur, ratione sit vero aut fugiat harum debitis incidunt necessitatibus perferendis aperiam labore minus iste saepe recusandae modi at sapiente perspiciatis, nostrum accusamus delectus? Vero dolorum quaerat nobis quae suscipit.
-Corrupti porro pariatur quo maxime provident laboriosam quas. Quam obcaecati iure autem, cumque dicta, porro sequi adipisci explicabo aliquid nihil debitis. Officia asperiores nostrum assumenda hic cum iure ad repellendus!
-Animi dicta, magnam adipisci cupiditate, pariatur repudiandae corporis iusto reiciendis itaque perferendis aspernatur quidem repellendus rem, veniam vero fugiat maxime minima. Officiis perspiciatis deleniti fuga, repellendus molestiae tenetur quidem impedit?
-Minima voluptatum dicta quod dolor magnam repellat? Temporibus asperiores eos earum dicta vitae iste quibusdam molestias perspiciatis est? Eaque, suscipit? Accusamus pariatur totam laborum quae quaerat facere unde ducimus nostrum!
-Suscipit vitae, inventore debitis cupiditate tenetur repellendus? Dignissimos consequatur repudiandae saepe aspernatur laboriosam laudantium, omnis ipsam accusantium qui officia adipisci alias veniam hic temporibus ipsum voluptas, ducimus architecto! Ullam, quis?
-Delectus exercitationem aliquam odio in tempora magnam repellat voluptas veritatis fugiat, voluptates est saepe nulla earum vel molestias fugit, possimus fuga cupiditate. Delectus fuga eveniet iste voluptate. Veritatis, enim. Incidunt?
-Deserunt doloribus dolor nisi a exercitationem assumenda in magni consectetur reprehenderit ipsam neque ducimus, beatae libero numquam nesciunt, nulla quisquam sapiente vel perspiciatis. Ducimus dolor saepe eos qui exercitationem dolores?
-Explicabo dolor qui at beatae dolores harum doloremque. Alias eum eos, culpa esse error aperiam ipsa id assumenda optio! Facere inventore doloribus quam excepturi! Modi nisi nostrum eveniet assumenda. Architecto.
-Consequatur suscipit quasi laborum hic atque iure voluptatum dolor cupiditate voluptate unde expedita culpa provident nam, sequi dignissimos iusto nihil aut illo repudiandae impedit modi veritatis facere pariatur architecto! Eius?
-Necessitatibus illum impedit fugit dicta sit. Ab aspernatur consectetur corrupti laboriosam nobis natus harum est, cupiditate eos saepe laudantium quia commodi! Inventore veritatis rerum beatae et nostrum sed fuga quas.
-Totam molestiae quaerat delectus eveniet repellendus nostrum! Itaque animi ullam impedit. Necessitatibus perferendis dicta mollitia impedit est sunt cupiditate a, voluptate nostrum at recusandae enim quos nobis, itaque deserunt aliquam!
-Eos minima hic alias aliquid similique, maiores architecto possimus. Fugiat magni veritatis dolorum delectus nisi quis, nam ratione. Reiciendis non aperiam ullam consequatur dolores illo et rerum eum corrupti vel.
-Odio, quibusdam atque fugit modi eos veniam quaerat magnam molestiae, eius praesentium commodi sequi fuga accusamus consectetur odit ratione consequatur maxime rem distinctio minus. Modi ullam delectus suscipit! Sapiente, consequuntur.
-Id, eaque modi accusantium, fugiat deserunt minima quibusdam a ullam itaque esse eum. Repellat, odit? Enim laboriosam blanditiis assumenda debitis saepe accusamus, distinctio sapiente error deserunt provident nam! Voluptate, adipisci?
-Ullam, magnam nulla, sint odit at doloremque accusamus, dignissimos velit consequuntur repellat hic eum placeat asperiores. Nam adipisci dolorem iure harum tenetur quasi veritatis a? In temporibus explicabo maxime nulla!
-Vitae quisquam fugiat, in, neque eveniet voluptatum ut a nam, reiciendis earum molestias id. Numquam eligendi vel amet ducimus, cumque corporis eius delectus rem dolore nostrum est ab? Aut, expedita!
-Explicabo magnam aspernatur praesentium ex non? Harum aut ut, vel blanditiis ex itaque adipisci tenetur facilis. Temporibus ex nostrum quae, quidem obcaecati eius non explicabo in illum, eos quo iste.
-Tempora quis iure repudiandae sed iusto est molestiae asperiores debitis mollitia rerum quo, fugit qui quam, ipsum aliquid minima libero ut deleniti maxime quisquam? Dignissimos nostrum delectus beatae? Nulla, in.
-Dolor eligendi dolorum quia illo id amet explicabo doloribus et assumenda! Fuga, saepe minima deleniti inventore dolore qui culpa. Earum autem, sunt illum exercitationem dolor vel voluptas explicabo dolores vero.
+
+        <div class="container footer" >
+                <!-- colonna sinistra footer  -->
+                <div class="colonna-footer sinistra">
+
+                    <h3>Boolando s.r.l.</h3>
+
+                    <ul class="lista footer">
+                        <li><a href="#">Informazioni legali</a></li>
+                        <li><a href="#">Informativa sulla privacy</a></li>
+                        <li> <a href="#">Diritto di recesso</a></li>
+                    </ul>
+                    
+                </div>
+
+                <!-- colonna sinistra footer  -->
+                <div class="colonna-footer sinistra">
+                    <div class="trovaci">Trovaci anche su</div>
+                
+                    <div class="icone footer">
+                        <i class="fa-brands fa-square-twitter"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <i class="fa-brands fa-square-pinterest"></i>
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </div>
+                </div>
+
+        </div>
+
     </footer>
 
 
