--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- main -->
     <main>
     <!-- riga 1 -->
-    <!-- riga 2 --> <div>a</div>
+    <!-- riga 2 -->
     </main>
 
     <!-- footer -->
