migliorato parte debug in css

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
     <!-- main -->
     <main>
     <!-- riga 1 -->
+     <div class="container main">
+
+     </div>
+
+
+
+
     <!-- riga 2 -->
     </main>
 
