--- a/index.html
+++ b/index.html
@@ -50,6 +50,38 @@
     <main>
     <!-- riga 1 -->
      <div class="container main">
+        <!-- prima riga  -->
+        <div class="row main">
+            
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+        </div>
+        <!-- seconda riga  -->
+        <div class="row main">
+            
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+            <div class="product-column">
+                <img class="img product" src="img/1.webp" alt="">
+            </div>
+
+        </div>
 
      </div>
 
