--- a/index.html
+++ b/index.html
@@ -52,33 +52,60 @@
      <div class="container main">
         <!-- prima riga  -->
         <div class="row main">
-            
+            <!-- primo prodotto -->
             <div class="product-column">
+
                 <img class="img product" src="img/1.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
+                <div class="labels">
+                    <span class="label discount">-50%</span>
+                    <span class="label sostenibility">sostenibilità</span>
+                </div>
             </div>
 
+
+            <!-- secondo prodotto  -->
             <div class="product-column">
-                <img class="img product" src="img/1.webp" alt="">
+                <img class="img product" src="img/2.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
+                <div class="labels">
+                    <span class="label discount">-30%</span>
+                </div>
             </div>
 
+            <!-- terzo prodotto  -->
             <div class="product-column">
-                <img class="img product" src="img/1.webp" alt="">
+                <img class="img product" src="img/3.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
+                <div class="labels">
+                    <span class="label discount">-30%</span>
+                </div>
             </div>
 
         </div>
         <!-- seconda riga  -->
         <div class="row main">
-            
+            <!-- quarto prodotto  -->
             <div class="product-column">
-                <img class="img product" src="img/1.webp" alt="">
+                <img class="img product" src="img/4.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
+                <div class="labels">
+                    <span class="label discount">-50%</span>
+                    <span class="label sostenibility">sostenibilità</span>
+                </div>
             </div>
 
             <div class="product-column">
-                <img class="img product" src="img/1.webp" alt="">
+                <img class="img product" src="img/5.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
             </div>
 
             <div class="product-column">
-                <img class="img product" src="img/1.webp" alt="">
+                <img class="img product" src="img/6.webp" alt="">
+                <div class=><i class="fa-solid fa-heart like"></i></div>
+                <div class="labels">
+                    <span class="label sostenibility">sostenibilità</span>
+                </div>
             </div>
 
         </div>
